# dotfiles

./: .gitconfig  .gitignore  .gitmodules  .vimrc  .wezterm.lua  .zshenv  .zshrc  .zshrc.OLD  Bmain  Bmods  README.md  attach_dotfiles.zsh  casual.zshrc  create_symbolic.ps1  create_symbolic.sh  load.ps1
.config/: icons  nvim  snippets  template
.config/cron/: hello.sh  template
.config/dein/: dein  dein.toml  dein_lazy.toml
.config/emacs/: init.el  keybind.cheatsheet
.config/fonts/: .uuid
.config/lib/: lib
.config/lldb/: .editrc  run.zsh
.config/neovide/: config.toml
.config/nushell/: history.txt
.config/nvim/: .netrwhist  init.lua  init.vim  nvim
.config/pockets/: assembler  c  c++  lua  powershell  python  rust  shell
.config/snippets/: .bash_history  oneline  projects_list  snippets
.config/template/: CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  template  template.c  template.cpp  template.cs  template.cu  template.lua  template.md  template.py  template.rb  template.rs  template.sh  template.tex  template.toml  template.vim  template.yaml  template.zsh
.config/zsh/: aliases.zsh  core.zsh  core.zshrc  dev.zsh  etc.zsh  local.zshrc  minimum.zshrc  neovim-autocd.py  single.zsh
.docker/: config.json
.github/workflows/: Bmods_test.yaml
alacritty/: alacritty.yml
schedule/: calendar.txt  date.txt  weekly.txt
windows/: Bmods.ps1  profile.ps1  settings.json  settings.json.ORIG
windows/onelines/: BASENAME:(Get-Item $file_path ).Basename        ## Bmods  FULLPATH:(Get-Item $file_path ).FullName        ## C:\Users\Bucchiman\dotfiles\windows\Bmods.ps1  Var:$ENV:PATH  Var:$PROFILE  (+3 more)
(+282 files in other folders)
